[gd_scene format=3 uid="uid://enemy123"]

[ext_resource type="Script" uid="uid://duyj8eirp8pjn" path="res://Enemy.gd" id="1_enemy"]
[ext_resource type="Texture2D" uid="uid://djexynfpjf1l7" path="res://Slime.png" id="2_icon"]
[ext_resource type="Script" uid="uid://cbejdyy6korth" path="res://components/HealthComponent.gd" id="3_health_comp"]
[ext_resource type="PackedScene" uid="uid://healthbar123" path="res://ui/HealthBar.tscn" id="4_healthball"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_e"]
properties/0/path = NodePath("HealthComponent:current_health")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="Animation" id="Animation_walk"]
resource_name = "walk"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_slime"]
_data = {
&"walk": SubResource("Animation_walk")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_enemy"]

[node name="Enemy" type="CharacterBody3D" unique_id=1752391650]
collision_layer = 4
script = ExtResource("1_enemy")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." unique_id=2008786542]
replication_config = SubResource("SceneReplicationConfig_e")

[node name="Sprite3D" type="Sprite3D" parent="." unique_id=2026589319]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
pixel_size = 0.02
billboard = 1
texture = ExtResource("2_icon")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2012673744]
libraries/ = SubResource("AnimationLibrary_slime")
autoplay = &"walk"

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=470900915]
shape = SubResource("CapsuleShape3D_enemy")

[node name="HealthComponent" type="Node" parent="." unique_id=80050610]
script = ExtResource("3_health_comp")
max_health = 30.0

[node name="HealthBarSprite" type="Sprite3D" parent="." unique_id=2230196]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
billboard = 1

[node name="SubViewport" type="SubViewport" parent="HealthBarSprite" unique_id=2136822450]
transparent_bg = true
size = Vector2i(200, 30)

[node name="HealthBar" parent="HealthBarSprite/SubViewport" unique_id=1331108633 instance=ExtResource("4_healthball")]
